# forgery-pipeline

./: .gitignore  README.md  pyproject.toml
checking/: README.md  __init__.py  data.py  extractor.py  gate0.py  gate1.py  gate1_cfgsteps_2026-07-15.json  gate1_cfgsteps_supplement_report_2026-07-15.md  gate1_confirmatory.py  gate1_confirmatory_2026-07-15.json  gate1_confirmatory_report_2026-07-15.md  gate1_nuisance_decomposition.py  gate1_nuisance_decomposition_2026-07-16.md  gate2.py  gate3.py  gate4_eval.py  metrics.py  run_gates.py  testc_geometry_probe.py  testc_geometry_report_2026-07-16.md
configs/: gate2_probe.yaml  generators.real.yaml  generators.yaml  pipeline.example.yaml  probe.real.cfgsteps.yaml  probe.real.n200.yaml  probe.real.yaml  probe.yaml  prompt_bank.yaml  split.yaml
docs/: EXECUTION_CHECKLIST.md  GATE_DATA.md  PAPER_DESIGN.md  PAPER_DESIGN_v2_2026-07-15.md  PATCHES.md  PATCHES_addendum_06_07_2026-07-15.md  PATCH_9_for_addendum_2026-07-15.md  PREREG_gate1_v2_2026-07-15.md  PREREG_gate2_v3_draft.md  experiment_log_2026-07-15.md  gate_results_analysis_2026-07-02.md  group_meeting_report_2026-07-02.md  group_meeting_report_2026-07-15_gate1.md  multi_sigma_tweedie_forensics.md  next_optimization_plan_2026-07-09.md  paper_experiment_plan_2026-07-15.md  real_gate_results_2026-07-02.md
examples/: run_mock_pipeline.sh
scripts/: assert_compositing_pairs.py  b3_preflight.py  backfill_manifest_v7.py  fetch_real_images.py  gate0_cross_generator.py  gate1_only.py  run_cross_generator_p0.sh
tests/: test_assert_compositing_pairs.py  test_b3_preflight.py  (+53 more)
(+66 files in other folders)
